tests/NormalTests/paczka1/small_fuzzy/30452980.err
Error in line 3: hHc2 S381 91,4
Error in line 14: S381 S472 88,@
